# galStarterTemplate

./: .clang-format  .gitignore  .travis.yml  CMakeLists.txt  ReadMe.adoc  ReadMe.md  appveyor.yml
.github/workflows/: build-and-test.yml  ci.yml  install.yml  linux.yml  ubuntu.yml  windows.yml  workflow.yml
001-basic/: ReadMe.adoc
001-basic/01-hello-world/: CMakeLists.txt  ReadMe.adoc  main.cpp
001-basic/02-hello-headers/: CMakeLists.txt  ReadMe.adoc
001-basic/03-hello-static-library/: CMakeLists.txt  ReadMe.adoc
001-basic/03-hello-static-library/include/: hello.hpp
001-basic/03-hello-static-library/src/: main.cpp
001-basic/04-hello-shared-library/: CMakeLists.txt  ReadMe.adoc
001-basic/05-hello-install/: CMakeLists.txt  ReadME.adoc
001-basic/05-hello-install/include/: hello.hpp
001-basic/05-hello-install/src/: hello.cpp
001-basic/06-hello-build-type/: CMakeLists.txt  ReadMe.adoc  main.cpp
001-basic/07-hello-compile-flag/: CMakeLists.txt  ReadMe.adoc  main.cpp
001-basic/08-hello-3rd-party/: CMakeLists.txt  ReadMe.adoc  main.cpp
001-basic/09-hello-cxx-standard/: CMakeLists.txt  main.cpp
002-sub-projects/: ReadMe.adoc
002-sub-projects/a-sub-project/: CMakeLists.txt  ReadMe.adoc
002-sub-projects/a-sub-project/a-interface/: CMakeLists.txt
002-sub-projects/a-sub-project/a-interface/include/headonly/: hello.hpp
002-sub-projects/a-sub-project/a-shared-library/: CMakeLists.txt
002-sub-projects/a-sub-project/a-shared-library/include/shared/: hello.hpp
002-sub-projects/a-sub-project/a-shared-library/src/: hello.cpp
002-sub-projects/a-sub-project/a-static-library/: CMakeLists.txt
002-sub-projects/a-sub-project/a-static-library/include/static/: hello.hpp
002-sub-projects/a-sub-project/a-static-library/src/: hello.cpp
002-sub-projects/a-sub-project/application/: CMakeLists.txt  main.cpp
003-code-generation/: ReadMe.adoc
003-code-generation/01-configure-files/: CMakeLists.txt  ReadMe.adoc  main.cpp  path.hpp.in  version.hpp.in
003-code-generation/02-protobuf/: CMakeLists.txt  ReadMe.adoc  library.proto  main.cpp
004-unit-test/01-google-test/: CMakeLists.txt  ReadMe.adoc
004-unit-test/01-google-test/cmake/: prepare-3rd-party.cmake
005-package-manager/01-system-provide/: ReadMe.adoc
005-package-manager/02-vendoring-code/: ReadMe.adoc
005-package-manager/03-3rd-party/use-cpm/: CMakeLists.txt  ReadMe.adoc  main.cpp
cmake/: CPM.cmake  CompilerWarnings.cmake  Doxygen.cmake  PreventInSourceBuilds.cmake  Sanitizers.cmake  StandardProjectSettings.cmake  StaticAnalyzers.cmake  prepare-3rd-party.cmake  tools.cmake
exec/: CMakeLists.txt  main.cpp
exec/google-test/: ReadMe.md  test1.hpp  test3.cpp  test3.hpp
exec/test/: test.cpp
include/: gal_format_core.hpp  something.hpp
my_awesome_application/: CMakeLists.txt
my_awesome_application/src/: main.cpp
my_cool_shared_part/: CMakeLists.txt
my_cool_shared_part/module1/: CMakeLists.txt
my_cool_shared_part/module1/include/module1/: hey1.hpp
my_cool_shared_part/module1/src/: hey1.cpp
my_cool_shared_part/module1/test/: test_hey1.cpp
my_cool_static_part/: CMakeLists.txt
my_cool_static_part/module1/: CMakeLists.txt
my_cool_static_part/module1/include/module1/: hello1.hpp
my_cool_static_part/module1/src/: hello1.cpp
my_cool_static_part/module1/test/: test_hello1.cpp
my_cool_static_part/module2/: CMakeLists.txt
my_cool_static_part/module2/include/module2/: hello2.hpp
my_cool_static_part/module2/src/: hello2.cpp
my_cool_static_part/module2/test/: test_hello2.cpp
src/: something.cpp
sub-project1/: CMakeLists.txt  main.cpp
sub-project1/include/: project_1.hpp
sub-project1/src/: project_1.cpp
sub-project2/: CMakeLists.txt
sub-project2/cmake/: google-test.cmake
sub-project2/google-test/: prime_table.hpp  test1.cpp  test2.cpp  test5.cpp  test6.cpp  test8.cpp
sub-project3/: CMakeLists.txt  main.cpp
test/: CMakeLists.txt  main.cpp
test/cmake/: google-test.cmake
test/google-test/: prime_table.hpp  test1.cpp  test1.hpp  test10.cpp  test3.cpp  test3.hpp  test4.cpp  test5.cpp  test7.cpp  test9.cpp
test/test/: test.cpp
